maze.lessons.maze.island.IslandMaze.scala.error
Escaper:19: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime1.Escaper
  setDirection(direction.NORTH)
               ^